fixed squished second-logo

--- a/themes/src-project/sass/site/primary/_header.scss
+++ b/themes/src-project/sass/site/primary/_header.scss
@@ -8,9 +8,10 @@
   .site-branding img {
     height: 80px;
     max-width: auto;
+    width:auto;
   }
 
-  .site-branding.second-logo {
+  .site-branding .second-logo {
     text-align: right;
   }
 
